# WHONews-Scraper

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
deploy/: k8s-cronjob.yaml
docs/: DOCKER_KUBERNETES_TESTING.md  DOCKER_TESTING.md  DOCKER_TEST_RESULTS.md  QUICK_DOCKER_TEST.md  RUNBOOK.md  SUBMISSION_CHECKLIST.md  TESTING_STRATEGY.md  TRACEABILITY.md
examples/: README.md  frontend_sample.html  generate_frontend.py  styles.css
project_management/: NEXT_STEPS.md  README.md  SESSION_LOG.md  STATUS.md  TASKS.md  TECHNICAL_DEBT.md
scripts/: build_review_bundle.sh  run_once_entrypoint.sh  verify_build.sh  verify_db.sh
scripts/sql/: verify_latest_runs.sql  verify_schema.sql  verify_snapshot_counts.sql
sprints/: sprint_plan.md
sprints/active/: sprint_06_dip_protocols.md
sprints/completed/: sprint_06_dip_protocols.md  sprint_07_srp_decompose_scraper.md  sprint_08_extract_small_functions.md  sprint_09_error_handling.md  sprint_10_test_boundaries_http_abstraction.md  sprint_11_docker_single_process.md
sprints/planned/: sprint_07_srp_decompose_scraper.md  sprint_08_extract_small_functions.md  sprint_09_error_handling.md  sprint_10_test_boundaries_http_abstraction.md  sprint_11_docker_single_process.md
src/healthcare_news_scraper/: __init__.py  config.py  exceptions.py  filters.py  formatters.py  http.py  models.py  newsletter_parser.py  protocols.py  runner_once.py  (+3 more)
tests/: http_doubles.py  test_e2e_live.py  test_filter_unit.py  test_newsletter_parser_unit.py  test_package_unit.py  test_protocols_unit.py  test_public_api_unit.py  test_scheduler_unit.py  test_scraper_unit.py  test_storage_unit.py
(+2 files in other folders)
