[tool.poetry]
name = "healthcare_news_scraper"
version = "0.2.0"
description = "A web scraper for healthcare news articles from WHO and other sources"
authors = ["Andrew Gardner"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/atg25/HealthcareNews-Scraper"
repository = "https://github.com/atg25/HealthcareNews-Scraper"
keywords = ["healthcare", "news", "scraper", "WHO", "medical", "beautifulsoup"]
include = ["LICENSE", "CHANGELOG.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
packages = [{ include = "healthcare_news_scraper", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
croniter = "^2.0.0"

[tool.poetry.scripts]
healthcare-news-run-once = "healthcare_news_scraper.runner_once:main"
healthcare-news-validate-cron = "healthcare_news_scraper.scheduler:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
twine = "^6.0.0"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
markers = [
    "e2e: end-to-end tests (may hit network)",
]

testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
